--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,69 @@
 body{
-
-display: flex;
-justify-content: center;
-height:680px;
-align-items: center;
-}
-
-.container{ 
-  display: flex; 
-  flex-direction: column; 
-  border: 2px solid black;
-   height: 220; 
-   width: 340px; 
-   padding: 14px; 
-   align-items: baseline; 
-  }
-
-.container input{
-   margin:8px; width: 280px; 
+   display: flex;
+   justify-content: center;
+   height:680px;
+   align-items: center;
+   background-color: rgb(255, 115, 0);
+ }
+ .container{
+   display: flex;
+   flex-direction: column;
+   border: 2px solid black;
+   height: 220;
+   width: 340px;
+   padding: 14px;
+   /* margin-top: 200px; */
+   align-items: baseline;
    }
-
-.container button{
-   margin:8px;
-   width: 75px;
-}
-
-h1{
-   margin-left: 50px;
-   color: red;
-}
-h2{
-   color: brown;
-}
+   .container input{
+     margin:10px;
+     width: 280px;
+     /* padding-top: 10px; */
+   }
+   .container button{
+   margin:10px;
+   /* padding-top: 10px; */
+   /* width: 75px; */
+ }
+ 
+ .class{
+   background-color: red;
+   
+ }.scratched {
+   text-decoration: line-through;
+ }
+ 
+ .container{
+   display: flex;
+   height: auto;
+   width: auto;
+   background-color: rgb(87, 46, 46);
+   border: 2px solid black;
+   border-radius: 18px;
+   color: white;
+ }
+ 
+ 
+ /* .box-inside{
+   /* border: 2px solid white; */
+ .box h1{
+   text-align: center;
+ }
+ .box-inside p{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   border: 2px solid white;
+   border-radius: 10px;
+   padding-left: 10px;
+ }
+ .btn-cmplte{
+   background-color: blue;
+   color: white;
+ }
+ .btn-delete{
+   background-color: red;
+   color: white;
+   width: 40px;
+     height: 21px;
+ }
