--- a/src/App.css
+++ b/src/App.css
@@ -1,69 +1,24 @@
 body{
-   display: flex;
-   justify-content: center;
-   height:680px;
-   align-items: center;
-   background-color: rgb(255, 115, 0);
- }
- .container{
-   display: flex;
-   flex-direction: column;
-   border: 2px solid black;
-   height: 220;
-   width: 340px;
-   padding: 14px;
-   /* margin-top: 200px; */
-   align-items: baseline;
-   }
-   .container input{
-     margin:10px;
-     width: 280px;
-     /* padding-top: 10px; */
-   }
-   .container button{
-   margin:10px;
-   /* padding-top: 10px; */
-   /* width: 75px; */
- }
- 
- .class{
-   background-color: red;
-   
- }.scratched {
-   text-decoration: line-through;
- }
- 
- .container{
-   display: flex;
-   height: auto;
-   width: auto;
-   background-color: rgb(87, 46, 46);
-   border: 2px solid black;
-   border-radius: 18px;
-   color: white;
- }
- 
- 
- /* .box-inside{
-   /* border: 2px solid white; */
- .box h1{
-   text-align: center;
- }
- .box-inside p{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   border: 2px solid white;
-   border-radius: 10px;
-   padding-left: 10px;
- }
- .btn-cmplte{
-   background-color: blue;
-   color: white;
- }
- .btn-delete{
-   background-color: red;
-   color: white;
-   width: 40px;
-     height: 21px;
- }
+  padding: 60px;
+
+}
+
+.container{
+  border: 2px  solid brown;
+  display: flex;
+
+}
+.container img{
+  box-shadow: 2px 0px brown;
+  height: 500px;
+  width: 50%;
+}
+.container button{
+  margin: auto;
+  background-color: rgb(165, 135, 190);
+  padding: 20px;
+  border-color: rgb(66, 4, 124);
+  border-radius: 5px;
+  
+  
+}
