--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,6 @@ table, th, td{
     margin-left: 520px;
     margin-top: 50px;
     border: 1px solid;
-   
+    border-collapse: collapse;
+    padding: 5px;
 }
