--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,4 @@
 body{
-    text-align: center;
-}
-table, th, td{
-    margin-left: 520px;
-    margin-top: 50px;
-    border: 1px solid;
-    border-collapse: collapse;
-    padding: 5px;
+    
+    background-color: rgb(192, 167, 216);
 }
